--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-.terraform
-terraform.tfstate.backup
+.terraform.lock.hcl
+.terraform/
+lock
 terraform.tfstate
+terraform.tfstate.backup
+*.swp
+*.swo
+*.swn
+*.pyc
